[package]
name = "lsd-program"
version = "0.1.0"
description = "StaFi's solana lsd program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lsd_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = [
    "stake",
    "mint",
    "spl-token",
    "token",
    "associated_token",
] }
